--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "proptypes": "^1.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
